--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,59 +1,1 @@
-v2.9.0 Rename the project to AdsorPy and the module to adsorpy.
-v2.8.0 Resolve deprecation warnings of shapely.vectorized, add support for Python 3.14, update dependencies. Add raised errors to the docstrings.
-v2.7.0 Add Rtree and STRtree for faster lookup of polygons. Use Radon for improved code quality. Add type hints for array shape. Add CI testing for Python 3.13. Add a vacancy counter such that simulation termination takes place when it hits 0. Add a new flux mode where rotation is fixed per adsorption attempt. Add a homemade numba cdist instead of scipy cdist, removing scipy dependency.
-v2.6.0 Add Ruff linting (ALL rules), remove flake8. Change name of modules to lowercase.
-v2.5.0 Improve Delone set generation, add property tests and improve code coverage.
-v2.4.0 Add desorption and tests for desorption.
-v2.3.0 Change to the Black coding style from whatever the Pycharm standard style was. Because the diff will be extreme, this is more than a simple bugfix. Change the line width to 88 (barring comments and strings). Also change the way the structured array is generated.
-v2.2.0 Split single run and batch run modules, since the batch run functions need an extra optional dependency (dask[complete]). Make Mypy even more strict with the numpy typing plugin for array dtype support, and properly type the struct arrays as np.void. Prepare the script for numpy 2.0 migration (it works!)
-v2.1.0 Restructure the project, add a pyproject.toml such that it can be installed, add strict versions to the requirements and add the requirements_dev, add pytest with coverage, mypy, flake8, and tox.
-v2.0.6 Change all instances of a recarray to a structured array. This improves readability and may result in (insignificant) speed improvements.
-v2.0.5 Changes the default random number generator to the new PCG-64 DXSM, which is allegedly safer for parallel processing.
-v2.0.4 Removes several unused functions, adds some type hints, docstrings, and comments for improved readability.
-v2.0.3 Fixes a strange interaction between count() and repeated initialisation of the molecule data class. The count() instances have been moved from the __init__ to the __post_init__. This affected repeated runs and batch runs by crashing, and did not affect single runs.
-v2.0.2 Optimises the molecule data storage. The speed improvement should be insignificant, but the code becomes cleaner.
-v2.0.1 Fixes a minor error in the buffer trimming caused by the new molecule storage class. The error only affects speed, not accuracy.
-v2.0.0 Adds diffusion for all boundary condition types! Diffusion is simple (no potential energy fields yet).
-v1.10.0 Adds support for shape conversion with periodic boundary condition, prepares for diffusion.
-v1.9.0 Adds support for the periodic boundary condition in the new data storage system.
-v1.8.2 Adds more functionality to the new data storage class, removes the use of the old data storage.
-v1.8.1 Adds more funcitonality to the new data storage class. Conversion now works for soft boundaries.
-v1.8.0 Adds initial steps needed for proper shape conversion by adding a new class for data storage.
-v1.7.0 Adds grid-refeeding. Fixed a bug in the rotations and flips (minor effect on results).
-v1.6.0 Adds desorption/displacement. Displaced molecules are turned into empty polygons.
-v1.5.4 Replaces all instances of np.where(...)[0] by np.nonzero(...) or np.flatnonzero(), as recommended by NumPy.
-v1.5.3 Sets the angle of changed molecules to be the same as the molecule before change (or attempts that angle first).
-v1.5.2 Adds proper handling of orphaned grid sites (occupied sites without a molecule claiming them after removal).
-v1.5.1 Adds slots to all classes for increased speed and memory efficiency.
-v1.5.0 Adds species conversion/reaction of one molecule shape into another.
-v1.4.0 Adds gap distance computation.
-v1.3.5 Ravels transformation coordinates before unpacking for compatibility with Shapely 2.0 (updated from 1.8).
-v1.3.4 Adds support for square (cubic), honeycomb, and amorphous surfaces.
-v1.3.3 Adds an curve-fitter that uses a differential equation as a solver with an analytically defined Jacobian.
-v1.3.2 Patches the previous fix, adds a wait at the end of the multiprocessing so the processor shuts down gracefully.
-v1.3.1 Fixes a bug that sometimes crashes the np.array to dask.array conversion for creating chunks of size 0.
-v1.3.0 Adds gap distance mapping.
-v1.2.0 Implemented rotation- and mirror symmetry. Switched from Parquet to HDF5 for storage of flux results. Fixed bug.
-v1.1.2 Switches from sum(square(...)) squared distance computation to scipy's cdist. Re-adds multiprocessing. Bugfixes.
-v1.1.1 Fixed bugs.
-v1.1.0 Added the option to pick the site to which to place a molecule. If not used, the site is random.
-v1.0.2 Added minor optimisations and comments.
-v1.0.1 Turned Calculator into a module to be used with the RSA script. Added colours to the plot. Improved logging.
-v1.0.0 Added support for an arbitrary amount of molecule types. Gave the three boundary conditions individual flags.
-Separated the Hexgrid class into a Surface, Simulator, Calculator, MoleculeGroup,
-BoundaryParameters, and MoleculeCandidate. Added logging.
-v0.6.0 Added Dask; batch processing now makes use of multithreading. Added seeding based on datetime in microseconds.
-Side project: Created a script for 2D and 3D amorphous coordinates generation.
-v0.5.1 Removed the place_first_molecule method. The special case (0 molecules) is now handled normally.
-v0.5.0 Added hard/periodic boundary conditions and created inner method. Removed redundant inner radius checks.
-v0.4.1 Minor patches, moved animation to a separate module.
-v0.4.0 Rudimentary diffusion added. All molecule addition/diffusion steps return updated site data.
-v0.3.3 Removed rotated rectangular filter. Improved documentation and hints. Adding support for square grid.
-v0.3.2 Attempted speed-up with rotated rectangular filter. Twice as slow. Rolled back to previous version.
-v0.3.1 Molecules are their own module. Can be called from config.
-v0.3.0 Added config.
-v0.2.3 Restored indexing order.
-v0.2.2 Reversed indexing order. Twice as slow.
-v0.2.0 Added the trim_buffer, optimised performance.
-v0.1.1 Numerous optimisations.
-v0.1.0 Created.
+v1.0.0 Full release.
